--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <title>Welcome</title>
     <meta charset="utf-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2NZL7P4F0Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2NZL7P4F0Q');
+</script>
   </head>
 
   <body>
